2003-10-24  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\defname): Cleanup of this macro.
	  (\boldbraxnoamp): Nuked, it's equivalent to \boldbrax;
	  the caller changed.
	  Other minor cleanups around active paretheses.
	  (\defunargs): After reporting the "Unbalanced paretheses" error,
	  reset the count.

2003-10-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (makeinfo advantages): mention that plain text
	--no-headers does --enable-encoding.

2003-10-23  Karl Berry  <karl@gnu.org>

	* makeinfo/macro.c (define_macro): write the macro definition
	itself to the output stream, to give texinfo.tex a chance at it.
	Report from: Akim Demaille <akim@epita.fr>, 22 Oct 2003 17:15:34
	+0200.

	* doc/texinfo.tex (\readauxfile): make the \openout\auxfile be
	\immediate, to avoid spurious terminal output from the
	\immediate's in \setref.

2003-10-23  Stepan Kasal  <kasal@ucw.cz>

	Rewrite \parsearg:
	* doc/texinfo.tex (\parsearg, \parseargusing): \parseargusing is
	  a new macro which works just like good old \parsearg but takes
	  one more parameter which contains code to be performed within
	  a group just before we slurp the rest of the line---typically,
	  some catcode chages go here.
	  (\parseargx): Insert an \empty token before the arg to be read,
	  to prevent loosing of braces.  (Thus @end{foo} no longer works.)
	  (\parseargline, \argremovecomment, \argremovec): Change the way
	  comments are stripped; do not use \toks0.
	  (\removeactivespaces): is now called directly from \parsearg (via
	  \parseargusing and \argremovec), and stripps only the trainling
	  active spaces, doesn't perform expansion.
	  (\finishparsearg): New macro, finishes \parsearg by nuking the
	  added \empty token.
	  (\end, \endxxx): Don't call \removeactivespaces, don't use \toks0;
	  because of efficiency, move the error handling to ...
	  (\badenderror): ... a new macro.
	  (\doverbatim): ``\end{verbatim}'' changed to ``\end verbatim.''
