@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.29.
-.TH INFO "1" "June 2003" "info 4.6" "User Commands"
+.TH INFO "1" "October 2003" "info 4.6" "User Commands"
 .SH NAME
 info \- read Info documents
 .SH SYNOPSIS
@@ -34,7 +34,7 @@ specify nodes in first visited Info file.
 output selected nodes to FILENAME.
 .TP
 \fB\-R\fR, \fB\-\-raw\-escapes\fR
-don't remove ANSI escapes from man pages.
+don't remove ANSI escapes.
 .TP
 \fB\-\-restore\fR=\fIFILENAME\fR
 read initial keystrokes from FILENAME.
